[package]
edition = "2018"
license = "Apache-2.0"
name = "russh-napi"
repository = "https://github.com/warp-tech/russh"
version = "0.1.0"
rust-version = "1.65"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
napi = { version = "3.0.0-alpha", features = ["async"] }
napi-derive = "3.0.0-alpha"
tokio = { version = "1.17.0", features = ["macros"] }
russh = { version = "0.46.0-beta.2" }
# russh = { version = "0.46.0-beta.1", path = "./russh/russh" }
russh-keys = { version = "0.46.0-beta.2" }
# russh-keys = { version = "0.46.0-beta.1", path = "./russh/russh-keys" }
pageant = { version = "0.0.1-beta.3" }
async-trait = "0.1"
futures = "0.3"
thiserror = "1.0"
delegate = "0.12.0"
russh-sftp = "2.0.2"
env_logger = "0.10.2"

[build-dependencies]
napi-build = "1"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
